[gd_scene load_steps=11 format=3 uid="uid://qgcmajatpj1l"]

[ext_resource type="Script" uid="uid://b1wnffvoah1yo" path="res://src/ui/inventory/inventory_screen.gd" id="2_5ba00"]
[ext_resource type="Texture2D" uid="uid://bp2ivieyf6hqb" path="res://asset/texture/ui/icon/return.webp" id="3_f8iwh"]
[ext_resource type="Shader" uid="uid://bwq5fsfwuoq07" path="res://src/asset/shader/blur.gdshader" id="3_npm42"]
[ext_resource type="PackedScene" uid="uid://xc4y4l81r556" path="res://src/ui/menu/widget/virtual_key_button.tscn" id="4_adlvw"]
[ext_resource type="PackedScene" uid="uid://cselateplwulb" path="res://src/ui/inventory/map_container.tscn" id="4_wi8js"]
[ext_resource type="Texture2D" uid="uid://b8cln0trwj207" path="res://asset/texture/ui/control/switch.webp" id="5_adlvw"]
[ext_resource type="PackedScene" uid="uid://bxee6lrmo6ljx" path="res://src/ui/inventory/item_container.tscn" id="5_ceg3y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xau2n"]
shader = ExtResource("3_npm42")
shader_parameter/strength = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_npm42"]
content_margin_left = 2.0
content_margin_top = 1.0
content_margin_right = 2.0
content_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m4l5i"]

[node name="InventoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_5ba00")

[node name="Background" type="Control" parent="."]
anchors_preset = 0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blur" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_xau2n")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.466667)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 8.0
offset_right = -32.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TopContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ReturnButton" type="Button" parent="PanelContainer/VBoxContainer/TopContainer"]
clip_contents = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../ItemButton")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_npm42")
theme_override_styles/hover = SubResource("StyleBoxEmpty_npm42")
icon = ExtResource("3_f8iwh")
icon_alignment = 1

[node name="LeftSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/TopContainer"]
layout_mode = 2

[node name="ItemButton" type="Button" parent="PanelContainer/VBoxContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../MapButton")
focus_mode = 0
text = "INV_ITEM"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/TopContainer"]
layout_mode = 2

[node name="MapButton" type="Button" parent="PanelContainer/VBoxContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "INV_MAP"

[node name="RightSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/TopContainer"]
layout_mode = 2

[node name="InteractButton" parent="PanelContainer/VBoxContainer/TopContainer" instance=ExtResource("4_adlvw")]
layout_mode = 2
icon = ExtResource("5_adlvw")
action = &"interact"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_m4l5i")

[node name="MapContainer" parent="PanelContainer/VBoxContainer/ContentContainer" instance=ExtResource("4_wi8js")]
visible = false
layout_mode = 2

[node name="ItemContainer" parent="PanelContainer/VBoxContainer/ContentContainer" instance=ExtResource("5_ceg3y")]
visible = false
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/TopContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TopContainer/ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TopContainer/MapButton" to="." method="_on_map_button_pressed"]
